# motion

./: CMakeLists.txt  README.md
include/motion/: profile.h  profile.h.c
tests/: cubic-test.cpp  linear-test.cpp
